--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
   "dependencies": {
     "chalk": "^2.4.1",
     "commander": "^2.19.0"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
