--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
         "ecmaVersion": 12
     },
     "rules": {
-        "indent": ["error", 2]
+        "indent": ["error", 2],
+        "no-unused-vars": ["error", { "args": "none" }]
     }
 }
